[package]
name = "spl-token-metadata"
version = "0.0.1"
description = "NFT Marketplace Metadata"
authors = ["NFT Marketplace Maintainers <maintainers@fyfy.io>"]
repository = "https://github.com/fyfylian/nft-marketplace"
license = "Apache-2.0"
edition = "2018"
exclude = ["js/**"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.6.10"
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
thiserror = "1.0"
borsh = "0.8.2"

[lib]
crate-type = ["cdylib", "lib"]
